apps/base/hermes-personal/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes
  namespace: hermes-personal
spec:
  ingressClassName: traefik
  rules:
    - host: personal.hermes.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hermes
                port:
                  name: gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-dashboard
  namespace: hermes-personal
spec:
  ingressClassName: traefik
  rules:
    - host: personal.hermes-dashboard.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hermes
                port:
                  name: dashboard
